# OregonCore

sql/: auth.sql  create_mysql.sql
sql/updates/: 07_07_11_auth_account.sql  07_07_11_auth_realmlist.sql  1390_01_characters.sql  1390_02_characters.sql  18_05_11_realmd_realmlist.sql
src/: CMakeLists.txt
src/game/: CharacterHandler.cpp  Chat.cpp  Creature.cpp  Level3.cpp  Player.cpp  Player.h  SharedDefines.h  Spell.cpp  Spell.h  SpellAuras.cpp  SpellEffects.cpp  SpellHandler.cpp  SpellMgr.cpp  SpellMgr.h  StatSystem.cpp  Unit.cpp  Unit.h  UnitAI.cpp
src/oregonauth/: AuthSocket.cpp  CMakeLists.txt  Main.cpp  OregonAuth.aps  OregonAuth.rc  RealmList.cpp  RealmList.h  oregonauth.conf.dist
src/oregoncore/: Master.cpp  OregonCore.rc  oregoncore.conf.dist
src/scripts/EasternKingdoms/Karazhan/: boss_netherspite.cpp
src/scripts/EasternKingdoms/SunwellPlateau/: boss_felmyst.cpp
